[package]
name = "rocksdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc =  "0.2.11"
librocksdb_sys = { path = "librocksdb_sys"}

[dev-dependencies]
crc = "2.1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
tempfile = "3.1"