[package]
name = "libtitan_sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "titan"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2-sys = "0.1.8+1.0.8"
libc = "0.2.11"
libz-sys = { version = "1.1", features = ["static"] }
zstd-sys = "1.4.15+zstd.1.4.4"
lz4-sys = "1.9"

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"